clean-ingest.txt

> gosu-chroma-rag@1.0.0 clean-ingest
> npm run clean-cache && npm run ingest


> gosu-chroma-rag@1.0.0 clean-cache
> rm -f .rag-cache.json ingestion.db ingestion-report-*.json && echo '✅ Cleaned: hash cache and logs (ChromaDB data preserved)'

✅ Cleaned: hash cache and logs (ChromaDB data preserved)

> gosu-chroma-rag@1.0.0 ingest
> ts-node src/cli/index.ts ingest

[dotenv@17.2.3] injecting env (15) from .env -- tip: ✅ audit secrets and track compliance: https://dotenvx.com/ops
/Users/dev/typescript/gosu-chroma-rag/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/ingestion/IngestionPipeline.ts(4,51): error TS2305: Module '"../chunkers"' has no exported member 'splitOversizedChunks'.

    at createTSError (/Users/dev/typescript/gosu-chroma-rag/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/Users/dev/typescript/gosu-chroma-rag/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/Users/dev/typescript/gosu-chroma-rag/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/Users/dev/typescript/gosu-chroma-rag/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/Users/dev/typescript/gosu-chroma-rag/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1892:10)
    at Object.require.extensions.<computed> [as .ts] (/Users/dev/typescript/gosu-chroma-rag/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1480:32)
    at Module._load (node:internal/modules/cjs/loader:1299:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 2305 ]
}
